# TradingAgentsAstockMcp

./: .gitignore  README.md  README_CN.md  pyproject.toml
src/a_stock_mcp/: __init__.py  __main__.py  data.py  server.py
